--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,9 @@
-cmake_minimum_required(VERSION 3.22.1)
-project(HaxorLanguage)
+# CMakeList.txt : CMake project for Haxor, include source and define
+# project specific logic here.
+#
+cmake_minimum_required (VERSION 3.8)
+
+project ("Haxor")
 
 set(CMAKE_CXX_STANDARD 14)
 set(BUILD_ARCH "-m64")
@@ -7,37 +11,23 @@ set(TARGET_64 ON)
 set (C_COMPILER clang++)
 set (C_FLAGS -g -O3)
 
-
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
-
-# Set your project compile flags.
-# E.g. if using the C++ header files
-# you will need to enable C++11 support
-# for your compiler.
 
 include_directories(${LLVM_INCLUDE_DIRS})
 separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 add_definitions(${LLVM_DEFINITIONS_LIST})
 
-# add the executable
-add_executable(${PROJECT_NAME} main.cpp)
+# Add source to this project's executable.
+add_executable (Haxor "main.cpp")
 
+if (CMAKE_VERSION VERSION_GREATER 3.12)
+  set_property(TARGET Haxor PROPERTY CXX_STANDARD 20)
+endif()
+
+# TODO: Add tests and install targets if needed.
 add_subdirectory(HaxorLexer)
 add_subdirectory(HaxorParser)
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/externallibs/llvm-project/llvm)
-# that we wish to use
-llvm_map_components_to_libnames( llvm_libs
-    Analysis
-    Core
-    ExecutionEngine
-    InstCombine
-    Object
-    OrcJIT
-    RuntimeDyld
-    Support
-    native
-)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/external/llvm-project/llvm)
 
-# Link against LLVM libraries
 target_link_libraries(${PROJECT_NAME} Lexer Ast Parser ${llvm_libs})
